--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -74,6 +74,7 @@ main {
     font-weight: 550;
     font-size: 0.8em;
     line-height: 16px;
+    margin-right: 5px;
 }
 
 
@@ -82,6 +83,7 @@ main {
     height: 200px;
     border-radius: 50%;
     object-fit: cover;
+    object-position: center;
 }
 
 .container {
